MacViews: Mark key down event as handled when consumed by the IME.

r434436 changed how key events are handled on MacViews. It overrode
_wantsKeyDownForEvent: to receive more key events from Cocoa and passed all
unhandled key down events to the underlying views::Widget. However, key down
events captured by the IME in the following NSTextInputClient methods were not
marked as handled:
  - setMarkedText:selectedRange:replacementRange:
  - unmarkText:
As a result, these key down events were erronously passed to the underlying
views::Widget resulting in a regression in the IME behavior.

This CL fixes the regression by marking the key down event as handled in the
above mentioned methods.

BUG=676615

Review-Url: https://codereview.chromium.org/2601513002
Cr-Commit-Position: refs/heads/master@{#440483}

Former-commit-id: 85d9c68076c03f77b7c61a9c2e2056862bb9d189